--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="exportkit.figma" >
-
-	
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<application
 		android:allowBackup="true"
-		android:theme="@style/AppTheme"
-		android:label="@string/app_name" >
-		<activity
-		android:name=".home_activity"
-		android:configChanges="orientation|keyboardHidden|screenSize"
+		android:dataExtractionRules="@xml/data_extraction_rules"
+		android:fullBackupContent="@xml/backup_rules"
+		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
-		android:exported="true"  >
+		android:roundIcon="@mipmap/ic_launcher_round"
+		android:supportsRtl="true"
+		android:theme="@style/Theme.Rut_project"
+		tools:targetApi="31">
+		<activity
+			android:name=".Info2"
+			android:exported="true"
+			android:label="@string/app_name"
+			android:theme="@style/Theme.Rut_project">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
 	</application>
 
 </manifest>
