--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,22 @@
         android:theme="@style/Theme.Rut_project"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-			android:label="@string/app_name"
-			android:theme="@style/Theme.Rut_project"
-			android:exported="true">
-
-		<intent-filter>
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Rut_project">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-</manifest>
 
+</manifest>
