--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.Rut_project"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterActivity"
+            android:name=".RegisterFragment"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginFragment"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashFragment"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Rut_project">
