--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 19 16:05:20 MSK 2024
-sdk.dir=C\:\\Android\\SDK
+#Sun Jan 21 23:02:12 YEKT 2024
+sdk.dir=D\:\\programing\\androidstuio SDKK
