--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 21 21:02:04 MSK 2024
-sdk.dir=C\:\\Users\\79689\\AppData\\Local\\Android\\Sdk
+#Mon Jan 22 14:53:31 MSK 2024
+sdk.dir=C\:\\Android\\SDK
