Add Account deletion, Add acount exit

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Jan 22 14:53:31 MSK 2024
-sdk.dir=C\:\\Android\\SDK
+sdk.dir=C\:\\Users\\79689\\AppData\\Local\\Android\\Sdk
