--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,23 +8,21 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
-
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rut_project"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:windowSoftInputMode="adjustPan" />
+            android:name=".RegisterActivity"
+            android:exported="false" />
         <activity
-            android:name=".SplashFragment"
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-
-            android:theme="@style/Theme.Design.NoActionBar"
-            android:windowSoftInputMode="adjustPan">
+            android:theme="@style/Theme.Rut_project">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
