--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 26 19:01:53 YEKT 2024
-sdk.dir=D\:\\programing\\androidstuio SDKK
+#Mon Jan 29 19:48:01 YEKT 2024
+sdk.dir=/Users/im4ekdm/Library/Android/sdk
