Delete local booking, refactoring Cancelation Fragment

--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 31 12:49:57 MSK 2024
-
-sdk.dir=C\:\\Android\\SDK
+#Sun Feb 04 19:15:23 MSK 2024
+sdk.dir=C\:\\Users\\79689\\AppData\\Local\\Android\\Sdk
