--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 04 19:43:56 MSK 2024
-sdk.dir=C\:\\Android\\SDK
+#Tue Feb 06 03:27:38 YEKT 2024
+sdk.dir=/Users/im4ekdm/Library/Android/sdk
