--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 11 21:36:20 MSK 2024
-sdk.dir=C\:\\Android\\SDK
+#Thu Feb 15 10:30:25 MSK 2024
+sdk.dir=/Users/im4ekdm/Library/Android/sdk
